`playing` event isn't fired as early as it should https://bugs.webkit.org/show_bug.cgi?id=254256 rdar://107041118

Reviewed by Youenn Fablet.

Notify the HTMLMediaElement that the media time has changed on the first
change, bypassing the optimisation introduced by webkit.org/b/225396

Code will be exercised by media/media-source/media-source-end-of-stream-buffered.html
once the MockMediaPlayerMediaSource will be running in the GPU process
(webkit.org/b/225367)
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::currentTimeChanged):

Canonical link: https://commits.webkit.org/261959@main